--- a/style2.css
+++ b/style2.css
@@ -39,6 +39,13 @@ body {
     min-height: 100vh;
 }
 
+.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 body.no-scroll {
     overflow: hidden;
     position: fixed;
@@ -47,6 +54,8 @@ body.no-scroll {
     top: 0;
     left: 0;
 }
+
+
 
 
 
@@ -139,6 +148,32 @@ li a {
     transform: scale(1.1);
 }
 
+.typewriter {
+  color: #fff;
+  /* border: solid 2px white; */
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+
 .first {
     height: 90vh;
     /* border: 2px solid white; */
@@ -193,7 +228,7 @@ li a {
     font-family: monospace;
     color: rgb(232, 130, 28);
     font-weight: bold;
-    width: 90%;
+    width: 100%;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -1022,7 +1057,8 @@ a:hover {
     .projectcard {
         flex: 0 0 auto;
         width: 400px;
-        max-height: 450px;
+        min-height: 550px;
+        max-height: 550px;
         /* margin-left: 10px; */
         overflow: hidden;
         display: flex;
