--- a/style2.css
+++ b/style2.css
@@ -8,6 +8,7 @@
     font-variation-settings: "width" 100;
 }
 
+
 hr{
     border: none;
     height: 2px;
@@ -275,7 +276,7 @@ li a {
 
 .skills {
     width: 100%;
-    padding: 20px;
+    padding:10px;
     box-sizing: border-box;
 }
 
@@ -332,12 +333,13 @@ li a {
 
 .skdisplay {
     height: auto;
-    margin: 10px;
-    padding: 0px 10px 45px 10px;
+    /* margin: 10px; */
+    padding: 0px 10px 10px 10px;
     /* border: 2px solid white; */
     box-sizing: border-box;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     background-color: rgb(29, 29, 35);
+    overflow: auto;
 }
 
 .skdisplay h5 {
@@ -353,6 +355,8 @@ li a {
     flex-direction: column;
     color: aliceblue;
 }
+
+
 
 .skillInside h6 {
     margin: 0%;
@@ -394,7 +398,7 @@ li a {
 .project h2 {
     text-align: center;
     font-size: 2.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.1rem;
     color: #fff;
     position: relative;
     display: inline-block;
@@ -406,8 +410,8 @@ li a {
 .prdisplay {
     position: relative;
     height: auto;
-    margin: 10px;
-    border-radius: 25px;
+    /* margin: 1px 0; */
+    /* border-radius: 25px; */
     background-color: rgb(29, 29, 35);
     display: flex;
     flex-direction: row;
