--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     max-width: 100%;
     font-family: "Roboto", sans-serif;
@@ -14,6 +16,7 @@ hr{
     height: 2px;
     background-color: #414040;
     color: #272525;
+
 }
 
 html::-webkit-scrollbar {
@@ -25,12 +28,10 @@ html {
     scrollbar-width: none;
 }
 
-html {
+html{
     scroll-behavior: smooth;
-}
-
-body {
     background-color: rgb(40, 40, 57);
+    /* background-color: #000; */
     color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
@@ -38,6 +39,25 @@ body {
     overflow-x: hidden;
     transition: filter 0.4s ease;
     min-height: 100vh;
+}
+
+.main-content{
+    padding:0;
+    margin:0;
+}
+
+.back-video{
+    position: fixed;
+    right:0;
+    bottom:0;
+    top:0;
+    left:0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: -1;
+    padding: none;
 }
 
 .no-scroll {
@@ -55,10 +75,6 @@ body.no-scroll {
     top: 0;
     left: 0;
 }
-
-
-
-
 
 .bi::before,
 [class*=" bi-"]::before,
@@ -81,9 +97,11 @@ body.no-scroll {
 }
 
 .navbar {
-    background-color: rgb(76, 52, 97);
+    /* background-color: rgb(76, 52, 97); */
+    background-color: rgba(0, 0, 0, 0.6);
     padding-left: 15px;
     padding-right: 15px;
+    padding-top: 10px;
     overflow: hidden;
     flex-wrap: wrap;
     width: 100%;
@@ -104,6 +122,7 @@ body.no-scroll {
     color: white;
 }
 
+
 .links li {
     list-style-type: none;
     display: inline-block;
@@ -117,14 +136,15 @@ body.no-scroll {
     font-size: x-large;
     padding: 7px;
     border-radius: 7px;
-    color: aliceblue;
+    color: 	#a24ed6;
 
     &:hover {
-        background-color: rgb(108, 0, 176);
+        cursor: pointer;
+        color: #591e7d;
     }
 
     &:active {
-        background-color: rgb(94, 0, 153);
+        color: #333;
     }
 }
 
@@ -284,7 +304,7 @@ li a {
     margin: 0;
     margin-top: 10px;
     text-align: center;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: azure;
     font-size: 2.5rem;
 }
@@ -324,8 +344,7 @@ li a {
 }
 
 .ex h2 {
-    margin: 0;
-    margin-top: 50px;
+    margin: 50px 0 20px 0;
     text-align: center;
     color: azure;
     font-size: 2.5rem;
@@ -333,13 +352,12 @@ li a {
 
 .skdisplay {
     height: auto;
-    /* margin: 10px; */
-    padding: 0px 10px 10px 10px;
+    margin-top: 20px;
+    padding: 10px 10px 10px 10px;
     /* border: 2px solid white; */
     box-sizing: border-box;
     /* border-radius: 25px; */
-    background-color: rgb(29, 29, 35);
-    overflow: auto;
+    background-color: rgb(18, 18, 21);
 }
 
 .skdisplay h5 {
@@ -412,7 +430,7 @@ li a {
     height: auto;
     /* margin: 1px 0; */
     /* border-radius: 25px; */
-    background-color: rgb(29, 29, 35);
+    background-color: rgb(18, 18, 21);
     display: flex;
     flex-direction: row;
     gap: 25px;
@@ -439,7 +457,7 @@ li a {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    background-color: #9298edb4;
+    background-color: #7d36aab4;
     border-radius: 35px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -459,9 +477,6 @@ li a {
     scroll-snap-align: none;
     /* prevent snap from stopping on spacer */
 }
-
-
-
 
 .projectcard:hover {
     transform: translateY(-5px) scale(1.02);
@@ -498,14 +513,16 @@ li a {
     width: 100%;
     border-radius: 25px;
     overflow: hidden;
+    object-fit: contain;
 }
 
 .card-image {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
+    transform: scale(1.05); 
     transition: transform 0.5s ease;
-    border: solid 3px #767de3b4;
+    /* border: solid 3px #767de3b4; */
 }
 
 .card-overlay {
@@ -638,10 +655,10 @@ li a {
 
 .exdisplay {
     height: auto;
-    margin: 10px;
+    /* margin: 10px; */
     /* border: 2px solid white; */
-    border-radius: 25px;
-    background-color: rgb(29, 29, 35);
+    /* border-radius: 25px; */
+    background-color: rgb(18, 18, 21);
     padding-top: 30px;
     padding-bottom: 30px;
     display: flex;
@@ -979,13 +996,14 @@ a:hover {
     .links {
         position: absolute;
         padding: 0;
-        top: 30px;
+        top: 55px;
         left: -100%;
-        background: rgba(255, 255, 255, 0.2);
+        /* background: rgba(255, 255, 255, 0.2); */
+        background-color: rgba(0, 0, 0, 0.8);
         /* Semi-transparent white */
-        backdrop-filter: blur(30px);
+        /* backdrop-filter: blur(30px); */
         /* Blur effect behind the element */
-        -webkit-backdrop-filter: blur(10px);
+        /* -webkit-backdrop-filter: blur(10px); */
         /* For Safari */
         width: 100%;
         flex-direction: column;
@@ -1008,6 +1026,7 @@ a:hover {
     }
 
     .links button {
+        color: white;
         font-size: 1.5rem;
         padding: 10px;
         padding-left: 2px;
@@ -1017,6 +1036,7 @@ a:hover {
     }
 
     .links a {
+        color: white;
         padding-left: 5px;
         padding-right: 80%;
     }
@@ -1038,9 +1058,9 @@ a:hover {
 
     .prdisplay {
         height: auto;
-        margin: 10px;
+        /* margin: 10px; */
         /* padding-left: 10px; */
-        border-radius: 25px;
+        /* border-radius: 25px; */
         background-color: rgb(29, 29, 35);
         display: flex;
         flex-direction: row;
@@ -1067,7 +1087,7 @@ a:hover {
         overflow: hidden;
         display: flex;
         flex-direction: column;
-        background-color: #a2a6e2b4;
+        background-color: #7d36aab4;
         border-radius: 35px;
         padding: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
